# dagstributor

./: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  test_dagster_build.py  workspace.yaml
backup/: workspace.yaml
config/: dagster.yaml
dagstributor/: .gitignore  assets.py  definitions.py  pyproject.toml  test_timeout_conditions.py
dagstributor/automatic_transmission/: config_loader.py  jobs.py  ops.py  schedules.py
dagstributor/dagstributor/: definitions.py
dagstributor/dagstributor/automatic_transmission/: __init__.py  ops.py  schedules.py
dagstributor/reel-driver/: jobs.py  ops.py
dagstributor/reel_driver/: __init__.py  jobs.py  ops.py  schedules.py
dagstributor/reel_driver/sql/: review_all.sql
dagstributor/repositories/: main.py
dagstributor/resources/: __init__.py
dagstributor/test_jobs/: __init__.py  jobs.py  ops.py
dagstributor/test_k8s_manifest/: immediate_test.py  manifest_dict_test.py  ops.py  scheduled_k8s_test.py  simple_k8s_test.py  test_with_existing.py  working_test.py
dagstributor/wiring-schema-tics/: jobs.py  ops.py
dagstributor/wiring_schema_tics/: __init__.py  jobs.py  ops.py  schedules.py
dagstributor/wiring_schema_tics/sql/: test.sql  test_schmest.sql
dagstributor/wiring_schema_tics/sql/bak/: bak_media.sql  bak_prediction.sql  bak_training.sql  reload_media.sql  reload_prediction.sql  reload_training.sql
dagstributor/wiring_schema_tics/sql/ddl/: 00_drop_schema.sql  01_instantiate_media.sql  02_instantiate_training.sql  03_instantiate_prediction.sql  04_instantiate_test.sql  10_set_perms.sql
(+25 files in other folders)
