[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagstributor"
version = "0.1.0"
description = "Dagster DAGs for distributed workflow processing"
authors = [{name = "Dev Team"}]
requires-python = ">=3.8"
dependencies = [
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0",
    "dagster-postgres>=0.21.0",
    "dagster-docker>=0.21.0",
    "pandas>=1.5.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true